--- a/Java Script Games/index.html
+++ b/Java Script Games/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../../Bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     
@@ -101,7 +101,7 @@
         </div>
     </section>
     <script src="script.js"></script>
-    <script src="../../Bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../../Bootstrap/js/jquery-3.5.1.min.js"></script>
+    <script src="../Bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../Bootstrap/js/jquery-3.5.1.min.js"></script>
 </body>
 </html>
